[gd_scene load_steps=10 format=3 uid="uid://cxbhnjebp1asg"]

[ext_resource type="Script" path="res://scripts/battlephase.gd" id="1_0kpt2"]
[ext_resource type="Theme" uid="uid://7ocyba50ufr3" path="res://itemlist.tres" id="2_270c7"]
[ext_resource type="Texture2D" uid="uid://bbx4dceod1uik" path="res://icon.svg" id="3_lmdtq"]
[ext_resource type="Texture2D" uid="uid://c0jor6j2wl668" path="res://myassets/Sheen-Sheet.png" id="4_srroh"]
[ext_resource type="Script" path="res://scripts/playable_char.gd" id="5_dddjm"]
[ext_resource type="Texture2D" uid="uid://cuhn7gtwfgqkc" path="res://myassets/Chanel-Sheet.png" id="6_oaq1w"]
[ext_resource type="Script" path="res://scripts/npc_battlephase.gd" id="7_yah2q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h3jlk"]
content_margin_left = 36.0
content_margin_top = 14.0
bg_color = Color(0.136826, 0.136826, 0.136826, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_bottom_right = 10
shadow_color = Color(0, 0, 0, 0.87451)
shadow_size = 5
shadow_offset = Vector2(8.49, 13.345)

[sub_resource type="Theme" id="Theme_jpe63"]
Label/styles/normal = SubResource("StyleBoxFlat_h3jlk")

[node name="Battle Phase" type="Node2D"]
script = ExtResource("1_0kpt2")

[node name="TextEdit" type="Label" parent="."]
offset_left = 369.0
offset_top = 494.0
offset_right = 1065.0
offset_bottom = 581.0
theme = SubResource("Theme_jpe63")
text = "hello world"

[node name="ItemList" type="ItemList" parent="."]
offset_left = 440.0
offset_top = 292.0
offset_right = 838.0
offset_bottom = 446.0
mouse_default_cursor_shape = 2
theme = ExtResource("2_270c7")
theme_override_font_sizes/font_size = 23
allow_reselect = true
item_count = 4
max_columns = 2
same_column_width = true
icon_scale = 0.5
item_0/text = "Plead"
item_0/icon = ExtResource("3_lmdtq")
item_1/text = "Insist"
item_1/icon = ExtResource("3_lmdtq")
item_2/text = "Complain"
item_2/icon = ExtResource("3_lmdtq")
item_3/text = "Talk"
item_3/icon = ExtResource("3_lmdtq")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(311, 315)
scale = Vector2(9.09679, 9.09679)
texture = ExtResource("4_srroh")
hframes = 9
script = ExtResource("5_dddjm")
character_name = "Dwayne"

[node name="NPC" type="Sprite2D" parent="."]
position = Vector2(942, 89)
scale = Vector2(5.22222, 5.22222)
texture = ExtResource("6_oaq1w")
flip_h = true
hframes = 8
script = ExtResource("7_yah2q")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="respond" from="NPC" to="." method="_on_npc_respond"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
